--- a/Abdullah Melih Ozdemir/index.html
+++ b/Abdullah Melih Ozdemir/index.html
@@ -12,7 +12,7 @@
         <li><a class="button" href="mailto:melih27_44ozdemir44@hotmail.com?subject=Bana%20ulaşın"><img src="Photos/IMG_20220915_144116.jpg"></a></li>
         <h1>ABDULLAH MELİH ÖZDEMİR</h1>
         <h4>Electrical and Electronics Engineer</h4>
-        <p>My name is Abdullah Melih Özdemir. I'm an Electrical and Electronics Engineer. I was study in İnönü Üniversity. I have B2 level english. At the same time I'm html css java script C# and C developer. I love software. I don't like sports though I like swimming</p>
+        <p>My name is Abdullah Melih Özdemir. I'm an Electrical and Electronics Engineer. I was study in İnönü Üniversity. I have B2 level english. At the same time I'm html css java script C# and C developer. I love software. I love swimming though I don't like another sports</p>
         <ul>
             <li><a class="button" href="https://twitter.com/Melih_Org?t=H0CHcBf-E3OJF_Rgq6-DKw&s=09"><i class="fab fa-twitter"></i></a></li>
             <li><a class="button" href="https://instagram.com/melih_org?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><i class="fab fa-instagram"></i></a></li>
